# soup

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: README.md  anthropic_example.py  common.py  litellm_example.py  llm_classifier_example.py  ollama_example.py  openai_example.py  openrouter_example.py
src/soup/: __init__.py
src/soup/builders/: __init__.py  base.py  markdown.py
src/soup/core/: __init__.py  exceptions.py  messages.py  pipeline.py  resolver.py  soup.py
src/soup/models/: __init__.py  harness.py  skill.py
src/soup/sources/: __init__.py  local.py  remote.py  skill_md.py
src/soup/storage/: __init__.py  base.py  memory.py
src/soup/strategies/: __init__.py  base.py  bm25.py  keyword.py  llm_classifier.py  tag.py
src/soup/utils/: __init__.py  text.py
tests/: test_bm25_strategy.py  test_builders.py  test_harness.py  test_messages.py  test_pipeline.py  test_resolver.py  test_skill.py  test_skill_md.py  test_soup.py  test_sources.py  test_storage.py  test_strategies.py  test_utils.py
